# replace

./: CHANGELOG.md  README.md  pyproject.toml  replace.json  replace.py  replace.yaml  test_replace.py
locale/: messages.pot
locale/el/: messages.po
locale/en/: messages.po
locale/templates/: messages.pot
tests/: test_migrate_params.py  test_render.py
